deleted node modules

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "In this document we will explore how to create web applications with [ExpressJS](http://http://expressjs.com/).",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
